Sugati/src/objects/Pro_UE__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holiday_Suggestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holiday Suggestion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OBF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OBF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Questionnaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Management</label>
        <type>Checkbox</type>
    </fields>
    <label>Pro User Edition</label>
</CustomObject>